[metadata]
name = python_sbom
description = Generate a software bill of materials for your Python project in SPDX.
long_description = file: README.rst, HISTORY.rst
version = 0.1.0
keywords = python_sbom
author = Jeff Licquia
author_email = licquia@linuxfoundation.org
license = Apache Software License 2.0
url = https://github.com/licquia/python_sbom
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
packages = find:
test_suite = tests
install_requires =
        Click >= 7.0
        toml
        spdx-tools
setup_requires =
        pytest-runner
tests_require = pytest >= 3

[options.entry_points]
console_scripts =
        python_sbom = python_sbom.cli:main

[options.packages.find]
include =
        python_sbom

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:python_sbom/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

